[package]
name = "rusty-s3"
version = "0.6.0"
authors = ["Paolo Barbolini <paolo@paolo565.org>", "Federico Guerinoni <guerinoni.federico@gmail.com>"]
description = "Simple pure Rust AWS S3 Client following a Sans-IO approach"
keywords = ["aws", "s3", "minio"]
categories = ["web-programming", "api-bindings"]
repository = "https://github.com/paolobarbolini/rusty-s3"
license = "BSD-2-Clause"
documentation = "https://docs.rs/rusty-s3"
readme = "README.md"
edition = "2021"
rust-version = "1.71"

[dependencies]
hmac = "0.12.1"
sha2 = "0.10"
time = { version = "0.3", default-features = false, features = ["macros", "formatting"] }
url = "2.2.0"
percent-encoding = "2.1.0"
zeroize = "1"

# optional
base64 = { version = "0.22", optional = true }
quick-xml = { version = "0.37", features = ["serialize"], optional = true }
md-5 = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["full"]
wasm_bindgen = ["time/wasm-bindgen"]
full = ["dep:base64", "dep:quick-xml", "dep:md-5", "dep:serde", "dep:serde_json", "time/parsing"]

[dev-dependencies]
tokio = { version = "1.0.1", features = ["macros", "fs", "rt-multi-thread"] }
reqwest = "0.12"
getrandom = "0.2"
hex = "0.4"
pretty_assertions = "1"
criterion = "0.5"

[[bench]]
name = "actions"
harness = false

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
unused_trait_names = "warn"
ref_patterns = "warn"
