[package]
name = "rusty-s3"
version = "0.8.1"
authors = ["Paolo Barbolini <paolo@paolo565.org>", "Federico Guerinoni <guerinoni.federico@gmail.com>"]
description = "Simple pure Rust AWS S3 Client following a Sans-IO approach"
keywords = ["aws", "s3", "minio"]
categories = ["web-programming", "api-bindings"]
repository = "https://github.com/paolobarbolini/rusty-s3"
license = "BSD-2-Clause"
documentation = "https://docs.rs/rusty-s3"
readme = "README.md"
edition = "2021"
rust-version = "1.81"

[dependencies]
hmac = "0.12.1"
jiff = { version = "0.2", default-features = false, features = ["std"] }
percent-encoding = "2.1.0"
sha2 = "0.10"
url = "2.2.0"
zeroize = "1"

# optional
base64 = { version = "0.22", optional = true }
md-5 = { version = "0.10", optional = true }
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["full"]
wasm_bindgen = ["jiff/js"]
full = ["dep:base64", "dep:quick-xml", "dep:md-5", "dep:serde", "dep:serde_json", "jiff/serde"]

[dev-dependencies]
tokio = { version = "1.0.1", features = ["macros", "fs", "rt-multi-thread"] }
reqwest = "0.12"
getrandom = "0.3"
hex = "0.4"
pretty_assertions = "1"
criterion = "0.7"

[[bench]]
name = "actions"
harness = false

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
unused_trait_names = "warn"
redundant_pub_crate = "allow"
ref_patterns = "warn"
