[package]
name = "rusty-s3"
version = "0.10.0"
authors = ["Paolo Barbolini <paolo@paolo565.org>", "Federico Guerinoni <guerinoni.federico@gmail.com>"]
description = "Simple pure Rust AWS S3 Client following a Sans-IO approach"
keywords = ["aws", "s3", "minio"]
categories = ["web-programming", "api-bindings"]
repository = "https://github.com/paolobarbolini/rusty-s3"
license = "BSD-2-Clause"
documentation = "https://docs.rs/rusty-s3"
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
aws-lc-rs = { version = "1.17", optional = true }
graviola = { version = "0.4", optional = true }
hmac = { version = "0.13", optional = true }
jiff = { version = "0.2", default-features = false, features = ["std"] }
percent-encoding = "2.1.0"
sha2 = { version = "0.11", optional = true }
url = "2.2.0"
zeroize = "1"

# optional
base64 = { version = "0.22", optional = true }
instant-xml = { version = "0.7", optional = true }
md-5 = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["rustcrypto", "full"]
aws-lc-rs = ["dep:aws-lc-rs"]
rustcrypto = ["dep:hmac", "dep:sha2"]
graviola = ["dep:graviola"]
wasm_bindgen = ["jiff/js"]
full = ["dep:base64", "dep:instant-xml", "dep:md-5", "dep:serde", "dep:serde_json", "jiff/serde"]

[dev-dependencies]
tokio = { version = "1.0.1", features = ["macros", "fs", "rt-multi-thread"] }
reqwest = "0.13"
getrandom = "0.4"
hex = "0.4"
pretty_assertions = "1"
criterion = "0.7"

[[bench]]
name = "actions"
harness = false

[[test]]
name = "delete_objects"
required-features = ["full"]

[[test]]
name = "list_parts"
required-features = ["full"]

[[test]]
name = "upload_download"
required-features = ["full"]

[[example]]
name = "list_objects"
required-features = ["full"]

[[example]]
name = "multipart_upload"
required-features = ["full"]

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
unused_trait_names = "warn"
redundant_pub_crate = "allow"
ref_patterns = "warn"
